--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,15 +12,7 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
+  @apply bg-gray-900 text-white antialiased;
   font-family: Arial, Helvetica, sans-serif;
 }
